# ai_cost_guard

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai_cost_guard/: __init__.py
ai_cost_guard/cli/: __init__.py  main.py
ai_cost_guard/config/: loader.py
ai_cost_guard/core/: __init__.py  anomaly.py  baseline.py  guardrails.py  pricing.py  simulation.py  token_counter.py
ai_cost_guard/demo/: seed_demo_data.py
ai_cost_guard/sdk/: __init__.py  openai_client.py
ai_cost_guard/storage/: __init__.py  db.py  models.py  repository.py
tests/: __init__.py  test_anomaly.py  test_baseline.py  test_cli.py  test_config.py  test_guardrails.py  test_imports.py  test_pricing.py  test_sdk.py  test_simulation.py  test_storage.py
